2002-04-28  Nick Drochak  <ndrochak@gol.com>

	* ArrayTest.cs (TestIList_IndexOf): Display exception details if we get
	an unexpected one.

2002/04/24  Nick Drochak <ndrochak@gol.com>

	* IntegerFormatterTest.cs: Remove Console.WriteLines and use 
	AssertEquals() instead.

2002-04-22  Nick Drochak  <ndrochak@gol.com>

	* StringTest.cs: Add unique markers to Assert messages.

2002-04-09  Nick Drochak  <ndrochak@gol.com>

	* ArrayTest.cs: Remove BinarySearch test on unsorted arrays. The
	behavior is undefined if the array isn't sorted.

2002/04/09  Nick Drochak <ndrochak@gol.com>

	* DecimalTest.cs: Use AssertEquals() for better diagnostic message.

2002-04-09  Nick Drochak  <ndrochak@gol.com>

	* ByteTest.cs: Use AssertEquals() for better diagnostic message.

2002-04-08  Nick Drochak  <ndrochak@gol.com>

	* EnumTest.cs: Add a few tests for differently underlying types and
	the [Flags] attribute to test ToString().

2002-04-08  Nick Drochak  <ndrochak@gol.com>

	* EnumTest.cs: Add test for ToString for the case where the enum
	has [Flags] on it, and a mask value is used.

2002-04-04  Nick Drochak  <ndrochak@gol.com>

	* EnumTest.cs: Change one Assert() message string so the two are 
	unique. And clean up exception catching logic.

2002/03/28  Nick Drochak <ndrochak@gol.com>

	* IntegerFormatterTest.cs: Eliminate warnings about unused exception
	variables.

2002-03-28  Nick Drochak  <ndrochak@gol.com>

	* EnumTest.cs(TestFormat): Use Fail() instead of AssertEquals() in
	try-catch blocks. Add test to check if correct exception is being 
	thrown.

2002/03/18  Nick Drochak <ndrochak@gol.com>

	* ByteTest.cs:
	* Int64Test.cs:
	* SByteTest.cs: Do not hard code the "$" as the currency symbol to
	use for Parse tests. This isn not really the fix we need. These
	number formats vary wildly depending on the culture the system
	runs with.  We need a much better strategy here for testing this.
	* Int32Test.cs: Use #if NOTYET-#endif to disable a test.  This removes